syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetRecommendations (RecommendationRequest) returns (RecommendationResponse);
  rpc GetOrderBasedRecommendations (OrderRequest) returns (RecommendationResponse);
}

message OrderRequest{
  repeated string productIds = 1;
}


// Request structure for wishlist recommendation
message RecommendationRequest {
  repeated string productIds = 1; // Array of product IDs from  User wishlist
}

// Response structure
message RecommendationResponse {
  repeated Product products = 1; // Array of recommended products
}

// Product structure
message Product {
  string id = 1;
  string name = 2;
  string imageUrl = 3;
  float price = 4;
}
